--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
-xcode_workspace: AXWebViewController.xcworkspace
-xcode_scheme: AXWebViewController
+xcode_workspace: SQWebViewController.xcworkspace
+xcode_scheme: SQWebViewController
